<resources>
    <string name="app_name">WeatherApp</string>
    <string name="search_city">Search City</string>
    <string name="today">Today</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_data_found">No data found</string>
    <string name="temperature_with_degree">%s°C</string>
    <string name="five_day_forecast">5-day forecast</string>
    <string name="wind_speed_km_h">%.2f km/h</string>
    <string name="wind_speed">Wind speed</string>
    <string name="humidity">Humidity</string>
    <string name="high_temp">High : %.2f°C</string>
    <string name="low_temp">Low : %.2f°C</string>
    <string name="percentage">%d%%</string>
</resources>