<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="weatherDetails"
            type="com.weatherapp.domain.entity.CurrentWeatherResponseEntity" />

        <variable
            name="fragment"
            type="com.weatherapp.currentweather.CurrentWeatherFragment" />


        <import type="android.view.View" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{weatherDetails==null ? View.GONE : View.VISIBLE}">

        <TextView
            android:id="@+id/tv_city"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/screen_padding"
            android:text="@{fragment.args.city}"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/view_separator_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="London" />


        <View
            android:id="@+id/view_separator_city"
            android:layout_width="@dimen/_250dp"
            android:layout_height="@dimen/_1dp"
            android:layout_marginBottom="@dimen/screen_padding"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/tv_temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_temp"
            style="@style/TextAppearance.AppCompat.Display3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/screen_padding"
            android:text="@{String.format(@string/temperature_with_degree,weatherDetails.current.tempC)}"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/img_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="30 C" />

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginBottom="@dimen/screen_padding"
            app:layout_constraintBottom_toTopOf="@+id/tv_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weatherDetails.current.condition.text}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49"
            tools:text="Partly cloudy" />


        <View
            android:id="@+id/view_separator"
            android:layout_width="@dimen/_4dp"
            android:layout_height="@dimen/_4dp"
            android:layout_marginTop="@dimen/_25dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_padding"
            android:layout_marginTop="@dimen/_25dp"
            app:cardCornerRadius="@dimen/screen_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_separator">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/screen_padding">

                <TextView
                    android:id="@+id/tv_humidity"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_humidity_value"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/percentage, weatherDetails.current.humidity)}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="77%" />

                <TextView
                    android:id="@+id/tv_wind_speed"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_padding"
                    android:text="@string/wind_speed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_humidity" />

                <TextView
                    android:id="@+id/tv_wind_speed_value"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_padding"
                    android:text="@{String.format(@string/wind_speed_km_h, weatherDetails.current.windKph)}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_humidity_value"
                    tools:text="@string/wind_speed_km_h" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


        <Button
            android:id="@+id/btn_5day_forecast"
            style="@style/Widget.AppCompat.ActionMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/screen_padding"
            android:onClick="@{()-> fragment.onContinue()}"
            android:text="@string/five_day_forecast"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>